# 1

./: .gitignore  .npmrc  Dockerfile  PWA_DEPLOYMENT_GUIDE.md  PWA_FEATURE_SUMMARY.md  README.md  capacitor.config.ts  eslint.config.js  index.html  ionic.config.json  netlify.toml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.solid.json  vim3651.txt  vite.config.ts
.cargo/: config.toml
.github/workflows/: android-build.yml  docker-build.yml  gh-pages.yml  init-tauri-ios.yml  ios-build.yml  pages.yml  pr-agent.yml  tauri-android.yml  tauri-ios.yml  tauri-release.yml  test-build.yml
android/: .gitignore  build.gradle  capacitor.settings.gradle  gradle.properties
android/app/: build.gradle  capacitor.build.gradle
docs/: KEYBOARD_MANAGEMENT.md  MCP_ALARM_GUIDE.md  MCP_CALENDAR_GUIDE.md  MOBILE_HAPTIC_TEST_GUIDE.md  SAFE_AREA_GUIDE.md  SAFE_AREA_MIGRATION.md  agentic_loop_analysis.md  citation-system-design.md  gemini-aisdk-provider-plan.md  gemini-tts-README.md  gemini-tts-integration.md  gemini-tts-quickstart.md  i18n-guide.md  safe-area-keyboard-management.md  safe-area-migration.md  solid-bridge-enhanced-guide.md  solid-bridge-upgrade-summary.md  three-inputs-optimization-summary.md  unified-parameter-manager-refactoring.md  流式输出性能优化方案.md  自定义参数功能修复方案.md
ios/App/: Podfile
public/: manifest.webmanifest  sw.js
python/: README.md  SimpleGitGUI.spec  build.bat  build_exe.py  requirements.txt  run_git_gui.py  version_info.txt
scripts/: cors-proxy.js  live-reload.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  release-keystore.jks  tauri.conf.json  test_tool.txt
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/测试文件夹/: test-file.txt  test.txt
website/: index.html
(+1088 files in other folders)
