[package]
name = "aetherlink"
version = "0.6.1"
description = "AetherLink - AI-powered chat assistant with advanced features"
authors = ["AetherLink Team"]
license = "MIT"
repository = "https://github.com/your-username/AetherLink-app3"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["devtools", "tray-icon"] }

tauri-plugin-log = "2"
# HTTP 插件，启用 socks 特性以支持 SOCKS4/SOCKS5 代理
tauri-plugin-http = { version = "2.5", features = ["socks"] }

# 官方 dialog 插件 - 文件选择器
tauri-plugin-dialog = "2"
# 官方 fs 插件 - 文件系统操作
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# 仅桌面端：窗口状态记忆插件
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"

# 仅 Android 端：边缘到边缘显示插件
[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-edge-to-edge = "0.3.3"

# 开发时的可选功能
[features]
default = []
devtools = ["tauri/devtools"]

# 构建速度优化配置
[profile.dev]
# 关闭调试信息以加速构建
debug = 0
# 增加代码生成单元数量以提高并行度
codegen-units = 256
# 降低 LLVM 优化级别到 0（参考 Burn 108x 优化）
opt-level = 0

[profile.dev.build-override]
# 为构建脚本和过程宏启用优化
opt-level = 3

# 依赖库在 dev 模式下也用低优化级别加速编译
[profile.dev.package."*"]
opt-level = 0

# 发布版本优化配置
[profile.release]
# 优化大小而不是速度
opt-level = "s"
# 启用 LTO 以优化二进制大小
lto = true
# 减少代码生成单元以配合 LTO
codegen-units = 1
# 启用 panic = abort 以减少大小
panic = "abort"
# 去除调试信息
debug = false
